update Rockbox pages

--- a/about/colophon/testpage/index.html
+++ b/about/colophon/testpage/index.html
@@ -53,7 +53,7 @@
 
 
 
-<div class="clickdiv"><h3 id="clickable-box">Clickable Box</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant.</div></a>
+<div class="clickdiv"><h3 id="clickable-box">Clickable Box</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant.</p></div></a>
 <a href="" class="clickbox box clickimg" >
 
 
@@ -67,7 +67,7 @@
 </picture>
 
 
-<div class="clickdiv"><h3 id="clickable-box-with-image">Clickable Box with Image</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. sed do eiusmod tempor adipiscing elit.</div></a>
+<div class="clickdiv"><h3 id="clickable-box-with-image">Clickable Box with Image</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. sed do eiusmod tempor adipiscing elit.</p></div></a>
 
 <figure><img src="/img/photos/trichrome/summer/summer01.jpg" loading="lazy" alt="An image caption" width="100%" height="100%">
 <figcaption>Image with Caption Text</figcaption></figure>
@@ -76,7 +76,7 @@
 
 <h2 id="second-section">Second Section</h2><div class="text borderless box">
 
-<div><h3 id="text-box">Text Box</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</div>
+<div><h3 id="text-box">Text Box</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div>
 </div>
 <div class="listbox box"><h2>Text Box with List</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p><hr><ul class="linklist">
 
