--- a/design/index.html
+++ b/design/index.html
@@ -34,7 +34,7 @@
 <img src="/img/design/compacticons.svg" alt="symbols on a gray background">
 </picture>
 
-<div class="clickdiv"><h3 id="compacticons">compacticons</h3><p>An ultra compact symbolic icon set designed for use in both low resolution and high resolution displays.</div></a>
+<div class="clickdiv"><h3 id="compacticons">compacticons</h3><p>An ultra compact symbolic icon set designed for use in both low resolution and high resolution displays.</p></div></a>
 <a href="adwaitapod" class="clickbox box clickimg" >
 
 <picture>
@@ -42,7 +42,7 @@
 <img src="/img/design/adwaitapodthumb.png" alt="a bunch of ipods with vibrant lockscreens">
 </picture>
 
-<div class="clickdiv"><h3 id="adwaitapod">adwaitapod</h3><p>The modern Ui replacement for iPods. Packed with features and unique abilities exclusive to adwaitapod.</div></a>
+<div class="clickdiv"><h3 id="adwaitapod">adwaitapod</h3><p>The modern Ui replacement for iPods. Packed with features and unique abilities exclusive to adwaitapod.</p></div></a>
 <a href="tindra_grove" class="clickbox box clickimg" >
 
 <picture>
@@ -50,7 +50,7 @@
 <img src="/img/design/Tindras_grove_thumb.png" alt="">
 </picture>
 
-<div class="clickdiv"><h3 id="tindras-grove-logo">Tindra&rsquo;s Grove Logo</h3><p>Creation of a logo set for use in a personal blog and website.</div></a>
+<div class="clickdiv"><h3 id="tindras-grove-logo">Tindra&rsquo;s Grove Logo</h3><p>Creation of a logo set for use in a personal blog and website.</p></div></a>
 <a href="beryl_logo" class="clickbox box clickimg" >
 
 <picture>
@@ -58,7 +58,7 @@
 <img src="/img/design/BerylThumb.png" alt="a bunch of ipods with vibrant lockscreens">
 </picture>
 
-<div class="clickdiv"><h3 id="beryl-project-branding">Beryl Project Branding</h3><p>Client work for the Beryl Project to create a logo and visual identity.</div></a>
+<div class="clickdiv"><h3 id="beryl-project-branding">Beryl Project Branding</h3><p>Client work for the Beryl Project to create a logo and visual identity.</p></div></a>
 <a href="themify" class="clickbox box clickimg" >
 
 
@@ -72,7 +72,7 @@
 </picture>
 
 
-<div class="clickdiv"><h3 id="themify">Themify</h3><p>A user-recolourable Ui theme for iPods running Rockbox. Minimalist style, with adaptive Ui features.</div></a>
+<div class="clickdiv"><h3 id="themify">Themify</h3><p>A user-recolourable Ui theme for iPods running Rockbox. Minimalist style, with adaptive Ui features.</p></div></a>
 
 <h2 id="2022">2022</h2><a href="rebble_weather" class="clickbox box clickimg" >
 
@@ -87,7 +87,7 @@
 </picture>
 
 
-<div class="clickdiv"><h3 id="rebble-weather-icons">Rebble Weather Icons</h3><p>Reimagining the Pebble weather icons for use in future projects.</div></a>
+<div class="clickdiv"><h3 id="rebble-weather-icons">Rebble Weather Icons</h3><p>Reimagining the Pebble weather icons for use in future projects.</p></div></a>
 <a href="timetwistpop" class="clickbox box clickimg" >
 
 
@@ -101,7 +101,7 @@
 </picture>
 
 
-<div class="clickdiv"><h3 id="time-twist-pop">Time Twist Pop</h3><p>A simple, vibrant watchface for the colour models of the Pebble watch family. Featuring 24 different colourschemes</div></a>
+<div class="clickdiv"><h3 id="time-twist-pop">Time Twist Pop</h3><p>A simple, vibrant watchface for the colour models of the Pebble watch family. Featuring 24 different colourschemes</p></div></a>
 
 <h2 id="pre---2022">Pre - 2022</h2><a href="famicase" class="clickbox box clickimg" >
 
@@ -110,7 +110,7 @@
 <img src="/img/design/famicasethumb.png" alt="a game box cover">
 </picture>
 
-<div class="clickdiv"><h3 id="famicase-exhibition-2021">Famicase Exhibition 2021</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</div></a>
+<div class="clickdiv"><h3 id="famicase-exhibition-2021">Famicase Exhibition 2021</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</p></div></a>
 <a href="virtual_gallery" class="clickbox box clickimg" >
 
 <picture>
@@ -118,7 +118,7 @@
 <img src="/img/design/virtualgallery_thumb.png" alt="an abstract logo of a photo frame">
 </picture>
 
-<div class="clickdiv"><h3 id="virtual-gallery">Virtual Gallery</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</div></a>
+<div class="clickdiv"><h3 id="virtual-gallery">Virtual Gallery</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</p></div></a>
 <a href="streetwalker" class="clickbox box clickimg" >
 
 
@@ -132,7 +132,7 @@
 </picture>
 
 
-<div class="clickdiv"><h3 id="streetwalker">Streetwalker</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</div></a>
+<div class="clickdiv"><h3 id="streetwalker">Streetwalker</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</p></div></a>
 
 <nav class="navbut"><a class="prev" href="/">← Back to  Home </a>
 
