--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px"> 
 <div class="text borderless box">
 
-<div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>A Personal Website, Blog, Photo Gallery and Information tool.</div>
+<div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>A Personal Website, Blog, Photo Gallery and Information tool.</p></div>
 </div>
 
 <div class="listbox box"><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p><hr><ul class="linklist">
