--- a/wiki/index.html
+++ b/wiki/index.html
@@ -66,7 +66,7 @@
 
 
 
-<div class="clickdiv"><h3 id="rockbox-theming-for-beginners">Rockbox Theming for Beginners</h3><p>A guide for those looking to learn how to make their own Rockbox themes, starts from the basics and ends with a complete theme.</div></a>
+<div class="clickdiv"><h3 id="rockbox-theming-for-beginners">Rockbox Theming for Beginners</h3><p>A guide for those looking to learn how to make their own Rockbox themes, starts from the basics and ends with a complete theme.</p></div></a>
 <div class="listbox box"><h2>Advanced Guides &amp; Information</h2><hr><ul class="linklist">
 <li><a href="rockbox_advanced/font_combining" >• Making custom Rockbox Fonts</a></li>
 <li><a href="rockbox_advanced/rockbox_image_optimisation" >• Getting the most out of images</a></li>
@@ -84,7 +84,7 @@
 
 
 
-<div class="clickdiv"><h3 id="imagemagick-guide">ImageMagick Guide</h3><p>Explaining Commands and various tricks for the image editing tool.</div></a>
+<div class="clickdiv"><h3 id="imagemagick-guide">ImageMagick Guide</h3><p>Explaining Commands and various tricks for the image editing tool.</p></div></a>
 <a href="linux/pdf/" class="clickbox box clickimg" >
 
 <picture>
@@ -92,7 +92,7 @@
 <img src="/img/wiki/pdf_thumb.svg" alt="">
 </picture>
 
-<div class="clickdiv"><h3 id="pdf-utilities">PDF Utilities</h3><p>How to create, combine, add indexes, pull and add pages and more with PDFs in the command line.</div></a>
+<div class="clickdiv"><h3 id="pdf-utilities">PDF Utilities</h3><p>How to create, combine, add indexes, pull and add pages and more with PDFs in the command line.</p></div></a>
 <a href="linux/sftp" class="clickbox box clickimg" >
 
 <picture>
@@ -100,7 +100,7 @@
 <img src="/img/wiki/sftp.svg" alt="">
 </picture>
 
-<div class="clickdiv"><h3 id="ssh--sftp">SSH &amp; SFTP</h3><p>How to use SFTP to transfer files &amp; SSH to connect to devices via the command line.</div></a>
+<div class="clickdiv"><h3 id="ssh--sftp">SSH &amp; SFTP</h3><p>How to use SFTP to transfer files &amp; SSH to connect to devices via the command line.</p></div></a>
 <div class="listbox box"><h2>Linux Bookmarks</h2><hr><ul class="linklist">
 <li><a href="https://homebrewserver.club/"  target="_blank" rel="noreferrer" >⬩&nbsp; Homebrew Server Club</a></li>
 <li><a href="https://cyber.dabamos.de/unix/x11/"  target="_blank" rel="noreferrer" >⬩&nbsp; Cool, but obscure X11 tools</a></li>
@@ -126,7 +126,7 @@
 </picture>
 
 
-<div class="clickdiv"><h3 id="bee-encyclopedia">Bee Encyclopedia</h3><p>An Encyclopedia of various Bees I&rsquo;ve spotted, and photographed.</div></a>
+<div class="clickdiv"><h3 id="bee-encyclopedia">Bee Encyclopedia</h3><p>An Encyclopedia of various Bees I&rsquo;ve spotted, and photographed.</p></div></a>
 <a href="seedharvesting" class="clickbox box clickimg" >
 
 
@@ -140,7 +140,7 @@
 </picture>
 
 
-<div class="clickdiv"><h3 id="seed-harvesting">Seed Harvesting</h3><p>A record of harvesting seeds, when to pick and how I store them.</div></a>
+<div class="clickdiv"><h3 id="seed-harvesting">Seed Harvesting</h3><p>A record of harvesting seeds, when to pick and how I store them.</p></div></a>
 <div class="listbox box"><h2>Other Topics</h2><hr><ul class="linklist">
 <li><a href="beachfossils" >• Information on Beach Fossils</a></li>
 <li><a href="ecovillage" >• Record of my visit to Cloughjordan Ecovillage</a></li>
@@ -389,7 +389,7 @@
 <img src="/img/wiki/origami_designs_thumb.png" alt="">
 </picture>
 
-<div class="clickdiv"><h3 id="origami-design">Origami Design</h3><p>Original Origami designs I have designed over the years.</div></a>
+<div class="clickdiv"><h3 id="origami-design">Origami Design</h3><p>Original Origami designs I have designed over the years.</p></div></a>
 <div class="listbox box"><h4>Interesting Links</h4><hr><ul class="linklist">
 <li><a href="https://www.youtube.com/user/jonakashima"  target="_blank" rel="noreferrer" >⬩&nbsp; Randoma11y - compliant colour pairing generator</a></li>
 <li><a href="https://www.happyfolding.com/diagrams"  target="_blank" rel="noreferrer" >⬩&nbsp; Happy Folding diagram archive</a></li>
