--- a/wiki/linux/sftp/index.html
+++ b/wiki/linux/sftp/index.html
@@ -33,7 +33,7 @@
 <h4 id="putting-files-on-the-connected-system">Putting Files on the connected system.</h4><pre><code>sftp&gt; put location/filename</code></pre>
 <h4 id="getting-files-from-the-connected-system">Getting Files from the connected system.</h4><pre><code>sftp&gt; get location/filename</code></pre><div class="text borderless box">
 
-<div><h3 id="notes">Notes</h3><p>To transfer a whole directory of files, the <strong>-r</strong> flag can be used.</div>
+<div><h3 id="notes">Notes</h3><p>To transfer a whole directory of files, the <strong>-r</strong> flag can be used.</p></div>
 </div>
 <hr>
 <div class="listbox box"><h2>Links</h2><hr><ul class="linklist">
