--- a/wiki/rockbox_advanced/missing_features/index.html
+++ b/wiki/rockbox_advanced/missing_features/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="/css/style.css" rel="stylesheet"><link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
 
 <meta property="og:description" 
-  content="List of things that can&#39;t be done in Rockbox, but I wish to see added."/><link rel="me" href="https://post.lurk.org/@dook">
+  content="Documentation for features I am currently adding and plan to add to the Rockbox theme engine."/><link rel="me" href="https://post.lurk.org/@dook">
 <title> Missing Features List  • d00k.net</title></head>
 <body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
@@ -16,41 +16,57 @@
 <div class="main layout">
 
 <div class="title"><h1 id="top">Missing Features List</h1><hr></div>
-<p>Rockbox&rsquo;s theming engine is incredibly rich as it is, however there are some parts of it that I believe have a high potential to go further and make the user experience even better. I intend to slowly get to some of these over time, but if you&rsquo;re a developer interested in taking on some of these do consider giving me a shout.</p>
+<p>This page serves as documentation for my plans to extend the system which powers themes in Rockbox. This current plan aims to extend the abilities available to themes while following the intentions which the theme engine was built around.</p>
+<div class="listbox box">
+<h2>Table of Contents</h2>
+<details><summary>Expand</summary>
+<ul class="linklist">
+<li><a href="#currently-working-on" >• Currently Working On</a></li>
+<li><a href="#planned-features" >• Planned Features</a></li>
+<li><a href="#distant-plans" >• Distant Plans</a></li>
+</ul>
+</details></div>
 <hr>
 
-<h2 id="better-album-art">Better Album Art</h2><p>Album art is one the more basic parts of the theming engine, with just a single tag allowed per file. This makes dynamic features and different positions impossible. For most themes, this isn&rsquo;t an issue. But for those that have Lockscreens, it can be difficult to fit it in (adwaitapod suffers from this issue for example).</p>
-<p>There is already a patch for this from 10 years ago, but unfortunately was <a href="https://gerrit.rockbox.org/r/c/rockbox/&#43;/839" target="_blank" rel="noopener">never merged</a> and the author soon stopped contributing. The solution proposed is actually quite good, and if I&rsquo;m correct it was designed in mind to add support for displaying previous and next playing song&rsquo;s album art.</p>
-<p>Bonus addition would be adding a feature to these to set corner radius. Currently adding anti-aliased rounded corners to Album art is a bit complicated.</p>
+<h2 id="currently-working-on">Currently Working On</h2><p>These are features I&rsquo;m currently working on programming within Rockbox&rsquo;s source code.</p>
 
-<h2 id="nesting-st-tags">Nesting %St tags</h2><p>The Setting tag %St(..) is an incredibly useful tag, allowing you to grab information from any setting in Rockbox, however I believe with a small change to behaviour it can fill in some important gaps in the theming engine.</p>
-<p>Allowing Setting tags to be nested, especially inside other Setting tags, opens up to the possibility of theming the Quickscreen. Currently you can get the name of the Quickscreen items (using %St(qs top) etc.), but this doesn&rsquo;t give you the status of the item. Nesting Setting tags would let you use something like %St(%St(qs top)) to solve this.</p>
-<p>Allowing other tags, like the %dr rectangle drawing tag or %Vf foreground colour tag, to use Setting tags would also solve a long problem of themes not being able to access the user&rsquo;s menu selector colour (among other colour settings).</p>
+<h3 id="themeable-quickscreen-abilities">Themeable Quickscreen Abilities</h3><p>I&rsquo;m currently working to add theme tags which expose the data of the Quickscreen shortcuts feature. There are three tags in this design, %QS which retrieves the title of a quicksetting, %Qs which retrieves the output of a quicksetting and lastly %QI which retrieves a number that can be attributed to an icon in an image array. These are used like the following:</p>
+<pre><code>%QS(left) #eg output: Shuffle 
+%Qs(left) #eg output: On
+%QI(left) #eg output: 3</code></pre>
+<h3 id="exposed-line-selector--separator-colours">Exposed Line Selector &amp; Separator Colours</h3><p>Currently the only exposed colour settings are the Foreground and Background settings. However there also exists options to change the colours of the menu item selector and a colour for a line separating each menu item. These currently only affect Rockbox&rsquo;s default menu and cannot be used for the theme-able menu feature, massively limiting the real-world use of it. I&rsquo;ve yet to decide a final tag and functioning for this feature.</p>
+<hr>
 
-<h2 id="viewport-non-render-case">Viewport non-render case</h2><p>Currently, if a menu viewport is set to have zero width and height, it will still render the contents in some situations. It&rsquo;s not very consistent however. In some contexts like the Quickscreen, doing this will actually cause Rockbox to crash. Turning off viewports is important for features like Lockscreens, custom Quickscreens etc.</p>
-<p>This is more of a bug fix than a feature request, but I believe a good solution here would be to not display the current page&rsquo;s menu/system display if a menu viewport with zero width and height is turned on.</p>
+<h2 id="planned-features">Planned Features</h2><p>These features are ideas of things I&rsquo;d like to explore adding to the theme engine in the future. I&rsquo;ve added the ones I want to look at first at the top of the list.</p>
 
-<h2 id="theme-tag-for-manual-screen-refresh">Theme tag for manual screen refresh</h2><p>A lot of complex theming involves working around the limitations of Rockbox&rsquo;s viewport refresh system. For example, changing the size of a menu viewport while the theme is running will not update the viewport on screen, and it won&rsquo;t update until a refresh is applied (commonly by changing screen).</p>
-<p>Having a tag that can be used (albeit would want to be done sparingly) to call a refresh would alleviate a lot of issues and headaches. It would remove the need for things like &ldquo;scroll to refresh&rdquo; and certain bugs with menus being changed, improving user experience a decent amount.</p>
+<h3 id="tiling-image-tag">Tiling Image tag.</h3><p>A tag which can tile an image across a given viewport. This could be useful for interesting backgrounds, or for reducing the size of assets needed if a design in your theme is simple enough that it could be tiled instead.</p>
 
-<h2 id="tiling-image-tag">Tiling Image tag.</h2><p>A tag to tile a set image across a desired area would be massively helpful. I suspect it would just need to work like %xT(image).</p>
-
-<h2 id="solution-for-two-line-text">Solution for two line text</h2><p>Displaying text over two lines is a great feature in my opinion, and one I&rsquo;ve tried to create by hand in the likes of Themify. However this is massively imperfect and results in words being cut in half. My solution is mind for this was to detect the presence of a space at certain parts of the song name, and display the text around that, but detecting spaces is not possible currently.</p>
-<p>Adding some way of detecting spaces could solve this problem, or perhaps some way of display text over two lines could be added to the theming engine.</p>
-
-<h2 id="page-directory-tags">Page directory tags</h2><p>There&rsquo;s a tag for the current playing song&rsquo;s directory information: %d(n), which gets you the title of the 1st, 2nd, etc directory of the song&rsquo;s filepath.</p>
+<h3 id="page-directory-tags">Page directory tags</h3><p>There&rsquo;s a tag for the current playing song&rsquo;s directory information: %d(n), which gets you the title of the 1st, 2nd, etc directory of the song&rsquo;s filepath.</p>
 <p>I think creating an analog of this for the current page would open up the ability to theme pages in the Database and File explorers.</p>
 <p>For example, in the database you could have styled pages for artist or album pages specifically, using the following:</p>
 <pre><code>%?if(%l(2), =, Albums)&lt;%Lt&gt;</code></pre>
-<h2 id="artist-art-tag">Artist art tag</h2><p>This is a far bigger change, even than it would seem at first glance, but my proposal would be to add support for Artist images in Rockbox.</p>
+<h3 id="better-album-art">Better Album Art</h3><p>Album art is one the more basic parts of the theming engine, with just a single tag allowed per file. This makes dynamic features and different positions impossible. For most themes, this isn&rsquo;t an issue. But for those that have Lockscreens, it can be difficult to fit it in (adwaitapod suffers from this issue for example).</p>
+<p>There is already a patch for this from 10 years ago, but unfortunately was <a href="https://gerrit.rockbox.org/r/c/rockbox/&#43;/839" target="_blank" rel="noopener">never merged</a> and the author soon stopped contributing. The solution proposed is actually quite good, and if I&rsquo;m correct it was designed in mind to add support for displaying previous and next playing song&rsquo;s album art.</p>
+<p>Bonus addition would be adding a feature to these to set corner radius. Currently adding anti-aliased rounded corners to Album art is a bit complicated.</p>
+
+<h3 id="viewport-non-render-case">Viewport non-render case</h3><p>Currently, if a menu viewport is set to have zero width and height, it will still render the contents in some situations. It&rsquo;s not very consistent however. In some contexts like the Quickscreen, doing this will actually cause Rockbox to crash. Turning off viewports is important for features like Lockscreens, custom Quickscreens etc.</p>
+<p>This is more of a bug fix than a feature request, but I believe a good solution here would be to not display the current page&rsquo;s menu/system display if a menu viewport with zero width and height is turned on.</p>
+
+<h3 id="solution-for-two-line-text">Solution for two line text</h3><p>Displaying text over two lines is a great feature in my opinion, and one I&rsquo;ve tried to create by hand in the likes of Themify. However this is massively imperfect and results in words being cut in half. My solution is mind for this was to detect the presence of a space at certain parts of the song name, and display the text around that, but detecting spaces is not possible currently.</p>
+<p>Adding some way of detecting spaces could solve this problem, or perhaps some way of display text over two lines could be added to the theming engine.</p>
+<hr>
+
+<h2 id="distant-plans">Distant Plans</h2><p>These are features which I would love to see the theme engine capable of in order to improve user experience on Rockbox devices. However they would require changes that are on a scale different to the other items on this list and would need a lot more experience time, and convincing of the core dev team.</p>
+
+<h3 id="artist-art-tag">Artist art tag</h3><p>This is a far bigger change, even than it would seem at first glance, but my proposal would be to add support for Artist images in Rockbox.</p>
 <p>These could be used to show the current song&rsquo;s Artist in the player. But it could also be used in the Database to give a more rich interface.</p>
 <p>This would however require actually obtaining art of artists. There&rsquo;s existing methods of doing this, but you&rsquo;d require some kind of software to generate this. It&rsquo;s more of a pipe dream than anything, but I can see myself in the future adding it to a theme and building a script users can run to add this functionality themselves.</p>
 
-<h2 id="song-metadata-tags-for-menus">Song Metadata tags for menus</h2><p>Currently for the Database menus, Rockbox will display the song&rsquo;s filename and length in a single line of text. It&rsquo;s great for simple themes, but I think this could be split up into different tags for use with the &ldquo;Skinned Menus&rdquo; feature.</p>
+<h3 id="song-metadata-tags-for-menus">Song Metadata tags for menus</h3><p>Currently for the Database menus, Rockbox will display the song&rsquo;s filename and length in a single line of text. It&rsquo;s great for simple themes, but I think this could be split up into different tags for use with the &ldquo;Skinned Menus&rdquo; feature.</p>
 <p>Visually, this will help create more beautiful and informative Database menus. Something which I think would help user satisfaction, as the menu experience is complained about a lot in iPod communities.</p>
 <p>This feature would depend on having Page directory tags to be useful</p>
 
-<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
+<nav class="navbut"><a class="prev" href="/wiki/#rockbox-theming">← Back to  Wiki </a>
 
 </nav>
 </div>
