--- a/wiki/rockbox_theming/index.html
+++ b/wiki/rockbox_theming/index.html
@@ -22,12 +22,12 @@
 
 
 
-<div class="clickdiv"><h3 id="1-introduction">1. Introduction</h3><p>A gentle introduction to the world of rockbox theming.</div></a>
+<div class="clickdiv"><h3 id="1-introduction">1. Introduction</h3><p>A gentle introduction to the world of rockbox theming.</p></div></a>
 <a href="" class="clickbox box " >
 
 
 
-<div class="clickdiv"><h3 id="2-the-viewport">2. The Viewport</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant.</div></a>
+<div class="clickdiv"><h3 id="2-the-viewport">2. The Viewport</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant.</p></div></a>
 
 <nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
 
