--- a/about/colophon/testpage/index.html
+++ b/about/colophon/testpage/index.html
@@ -78,7 +78,7 @@
 
 <div><h3 id="text-box">Text Box</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div>
 </div>
-<div class="listbox box"><h2>Text Box with List</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Text Box with List</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div><ul class="linklist">
 
 <li>⚬ Item One.</li>
 <li>⚬ Item Two.</li>
@@ -92,13 +92,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </div>
 <pre><code>Example Codeblock
 
-%?and(%if(%ps, !=, 1),%if(%mm, =, 1),%or(%if(%fc, =, 4),%if(%fc, =, 5),%if(%fc, =, 7),%if(%fc, =, 11),%if(%fc, =, 13)))&lt;%xd(lossless)&gt;</code></pre><div class="listbox box"><h2>List of Links</h2><hr><ul class="linklist">
+%?and(%if(%ps, !=, 1),%if(%mm, =, 1),%or(%if(%fc, =, 4),%if(%fc, =, 5),%if(%fc, =, 7),%if(%fc, =, 11),%if(%fc, =, 13)))&lt;%xd(lossless)&gt;</code></pre><div class="listbox box"><div><h2>List of Links</h2></div><ul class="linklist">
 <li><a href="/" >• Option One</a></li>
 <li><a href="/" >• Option Two</a></li>
 <li><a href="/" >• Option Three</a></li>
 <li><a href="https://d00k.net/"  target="_blank" rel="noreferrer" >⬩&nbsp; External Link</a></li>
 </ul></div>
-<div class="listbox box"><h2>List of Links w/ Text</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p><hr><ul class="linklist">
+<div class="listbox box"><div><h2>List of Links w/ Text</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div><ul class="linklist">
 <li><a href="/" >• Option One</a></li>
 <li><a href="/" >• Option Two</a></li>
 <li><a href="/" >• Option Three</a></li>
