--- a/about/connections/index.html
+++ b/about/connections/index.html
@@ -16,7 +16,7 @@
 
 <div class="title"><h1 id="top">Connections</h1><hr></div>
 <p>Various connections of friends and folks from around the</p>
-<div class="listbox box"><h2>Friends</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Friends</h2></div><ul class="linklist">
 
 <li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >⬩&nbsp; Pixoul&#39;s Site</a></li>
 
@@ -37,7 +37,7 @@
 <li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >⬩&nbsp; jbauer&#39;s Site</a></li>
 
 </ul></div>
-<div class="listbox box"><h2>Webring</h2><p>A bunch of my favourite sites from the <a href="https://webring.xxiivv.com/" target="_blank" rel="noopener">Merveilles</a> webring.</p><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Webring</h2><p>A bunch of my favourite sites from the <a href="https://webring.xxiivv.com/" target="_blank" rel="noopener">Merveilles</a> webring.</p></div><ul class="linklist">
 <li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >⬩&nbsp; XXIIVV Wiki</a></li>
 <li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >⬩&nbsp; Thomasorus</a></li>
 <li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; RitualDust</a></li>
