--- a/about/index.html
+++ b/about/index.html
@@ -20,12 +20,12 @@
 <p>My name is Evan, however I go by Dook online. I&rsquo;m a designer who is constantly pushing themselves to learn new things. While I currently study Interaction Design, in my personal time I teach myself programming, sustainability and much more. I love music, and am always seeking for something new to listen to.</p>
 <hr>
 <!-- raw HTML omitted -->
-<div class="listbox box"><h2>Where to find Me</h2><p>Feel free to reach out to me with questions, or just to interact.</p><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Where to find Me</h2><p>Feel free to reach out to me with questions, or just to interact.</p></div><ul class="linklist">
 <li><a href="https://post.lurk.org/@dook"  target="_blank" rel="noreferrer" >⬩&nbsp; Mastodon: dook@post.lurk.org</a></li>
 <li><a href="https://pixelfed.social/Dook/"  target="_blank" rel="noreferrer" >⬩&nbsp; Pixelfed: Dook@pixelfed.social</a></li>
 <li><a href="mailto:contact@d00k.net"  target="_blank" rel="noreferrer" >⬩&nbsp; Contact me:   contact@d00k.net</a></li>
 </ul></div>
-<div class="listbox box"><h2>Further Reading</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Further Reading</h2></div><ul class="linklist">
 <li><a href="./journal/" >• Journal - What I&#39;m up to</a></li>
 <li><a href="./colophon" >• Colophon - Site Information</a></li>
 <li><a href="./connections" >• Connections - Friends &amp; Folks</a></li>
