--- a/design/streetwalker/index.html
+++ b/design/streetwalker/index.html
@@ -22,7 +22,7 @@
 <img  src="/img/design/streetwalker_3.png" loading="lazy" alt="a large map of the game&#39;s city">
 
 <p>The game&rsquo;s design takes heavy inspiration from digital maps as well as brutalist architecture. Without any discernable differences from one place to the next, players are forced to wander and explore the world like they would with a new city. There are no gameplay objectives, however items are scattered randomly throughout the world. Attention was put into the physicality of the game&rsquo;s world, with things like the character darkening when in shadows, large usable bridges that can be walked on and under as well as steps being slower to walk up and down.</p>
-<div class="listbox box"><h2>Links</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
 <li><a href="https://www.lexaloffle.com/bbs/?tid=38920"  target="_blank" rel="noreferrer" >⬩&nbsp; Play Streetwalker</a></li>
 
 <li><a href="https://www.lexaloffle.com/bbs/cposts/yu/yuwekogiwu-0.p8.png"  target="_blank" rel="noreferrer" >⬩&nbsp; Download the cart</a></li>
