--- a/design/timetwistpop/index.html
+++ b/design/timetwistpop/index.html
@@ -28,7 +28,7 @@
 
 <p>The 24 themes each have their own feel and identity. Silver Shadow, Slate Shadow, Rose Quartz, Sailor Blue, Mint Twist, Strawberry Twist, Citrus Twist, Dragon Blue, Sorcerer Red and Purple Punch are the first series. There is also a second series of 14 Pride Flags. Background colours are dithered to create the illusion of a perfect blend, creating the watchface&rsquo;s unique identity.</p>
 <hr>
-<div class="listbox box"><h2>Links</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
 <li><a href="https://apps.rebble.io/en_US/application/637a8d0cfdf3e30009f63964?section=watchfaces"  target="_blank" rel="noreferrer" >⬩&nbsp; Rebble Store page</a></li>
 
 <li><a href="https://github.com/D0-0K/time-twist-pop"  target="_blank" rel="noreferrer" >⬩&nbsp; Github Repository</a></li>
