--- a/photos/index.html
+++ b/photos/index.html
@@ -118,7 +118,7 @@
 
 
 <div class="clickdiv"><h3 id="vivid">Vivid</h3><p>Collection of several different experiments utilising light, that I did in 2020.</p></div></a>
-<div class="listbox box"><h2>Trichrome Notes</h2><p>My digital trichrome technique involves several steps which I&rsquo;ve documented in my notes below.</p><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Trichrome Notes</h2><p>My digital trichrome technique involves several steps which I&rsquo;ve documented in my notes below.</p></div><ul class="linklist">
 
 
 <li><a href="trichrome/trichrome_notes" >• Trichrome Technique</a></li>
