--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -133,7 +133,7 @@
 <li><a href="https://eol.org/pages/2747408"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
 </ul></div>
 <hr>
-<div class="listbox box"><h2>Further Reading</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Further Reading</h2></div><ul class="linklist">
 <li><a href="https://pollinators.ie/record-pollinators/bees/"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre</a></li>
 <li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Bumble Bee Identification Guide</a></li>
 </ul></div>
