--- a/wiki/linux/imagemagick/index.html
+++ b/wiki/linux/imagemagick/index.html
@@ -77,7 +77,7 @@ or
         -sampling-factor 4:2:0 \
         -strip -quality 80 \
         -interlace line input.jpg</code></pre><hr>
-<div class="listbox box"><h2>References Used</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>References Used</h2></div><ul class="linklist">
 <li><a href="https://kokorobot.ca/site/image_optimization.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Rekka Bellum&#39;s Image Optimisation Guide</a></li>
 
 <li><a href="http://www.aptivate.org/webguidelines/Images.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Web Design Guidelines for lean images</a></li>
