--- a/wiki/linux/pdf/index.html
+++ b/wiki/linux/pdf/index.html
@@ -50,7 +50,7 @@ BookmarkPageNumber: 4</code></pre>
 <pre><code>pdftk input.pdf \
 update_info metadata.txt \
 output output.pdf</code></pre><hr>
-<div class="listbox box"><h2>Links</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
 <li><a href="https://www.tomshardware.com/how-to/manipulate-pdf-files-with-pdftk"  target="_blank" rel="noreferrer" >⬩&nbsp; PDFTK Guide on tom&#39;s hardware</a></li>
 
 <li><a href="https://en.wikipedia.org/wiki/PDFtk"  target="_blank" rel="noreferrer" >⬩&nbsp; PDFTK Wikipedia Page</a></li>
