--- a/wiki/linux/sftp/index.html
+++ b/wiki/linux/sftp/index.html
@@ -36,7 +36,7 @@
 <div><h3 id="notes">Notes</h3><p>To transfer a whole directory of files, the <strong>-r</strong> flag can be used.</p></div>
 </div>
 <hr>
-<div class="listbox box"><h2>Links</h2><hr><ul class="linklist">
+<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
 <li><a href="https://homebrewserver.club/category/fundamentals.html"  target="_blank" rel="noreferrer" >⬩&nbsp; HomeBrewServer.club&#39;s fundamentals guides</a></li>
 
 </ul></div>
