--- a/wiki/rockbox_advanced/vector_graphics/index.html
+++ b/wiki/rockbox_advanced/vector_graphics/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="/css/style.css" rel="stylesheet"><link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
-<meta property="og:image" content="/img/" />
+
 <link rel="me" href="https://post.lurk.org/@dook">
-<title> Home  • d00k.net</title></head>
+<title> Vector_graphics  • d00k.net</title></head>
 <body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
@@ -11,16 +11,25 @@
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
 </ul></div></nav></div>
+
 <div class="main layout">
-<img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px"> 
+
+<div class="title"><h1 id="top">Vector_graphics</h1><hr></div>
+<p>In Rockbox themes, there is a missing link between re-colourable graphics and anti-aliased graphics. With all of the classical features, it is impossible to achieve an asset that exhibits both of these properties. However if we take advantage of the font system, we can created accurate vector graphics that behave exactly like images which are anti-aliased and can be re-coloured. This guide will go over my notes and explorations into this new practice.</p>
 <div class="text borderless box">
 
-<div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>A Personal Website, Blog, Photo Gallery and Information tool.</p></div>
+<div><h3 id="a-warning">A Warning</h3><p>Creating vector graphics in Rockbox is not a perfected art and the process is finicky and time consuming. A detailed process described here is not guaranteed to work for other use-cases, and you will most likely have to try many different things if this happens. Here be dragons.</p></div>
 </div>
+<hr>
 
-<div class="listbox box"><div><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p></div><ul class="linklist">
-<li><a href="/blog/quickscreen_rockbox_tags/">∙ A new way to theme the Quickscreen in Rockbox</a></li><li><a href="/blog/year-review-2023/">∙ Year Review 2023</a></li><li><a href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li> 
-</ul></div>
+<h2 id="what-you-will-need">What you will need</h2><p>The tools I use are Inkscape, FontForge and the Rockbox font utility &lsquo;convttf&rsquo;. This process could work using other applications like adobe illustrator, however I have not tested this nor am able to.
+You will also need access to vector graphics. You can create your own, or find some elsewhere. It is import that these are clean and without errors.</p>
+
+<h2 id="preparing-your-graphics">Preparing your graphics</h2><p>There are two different ways of preparing vectors.</p>
+
+<nav class="navbut"><a class="prev" href="/wiki/">← Back to  Wiki </a>
+
+</nav>
 </div>
 <div class="footer">
 <div class="layout">
@@ -29,7 +38,7 @@
 <a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28"height="28"></a>
 <a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="22"height="28"></a>
 <hr>
-<div style="margin:20px 0 8px">Published: <strong>August 2023</strong></div><div>d00k.net © 2024 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
+<div style="margin:20px 0 8px">Published: <strong>May 2024</strong></div><div>d00k.net © 2024 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none;width:521px;height:64px" src="/img/assets/footer.svg" height="64" width="521">
 </div>
